--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -17,6 +17,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 # GraphQL
 spring.graphql.graphiql.enabled=true
 spring.graphql.schema.introspection.enabled=true
+spring.graphql.path=/api/graphql
 
 
 
